Found bug: z-index in harmburger menu. Solution: take AudioPlayerOptions outside of WaveSurferPlayer

--- a/src/components/HamburgerDropdown/HamburgerDropdown.scss
+++ b/src/components/HamburgerDropdown/HamburgerDropdown.scss
@@ -12,6 +12,5 @@
   .children {
     right: 0;
     position: absolute;
-    z-index: 40;
   }
 }
